Fixed overlapping issue to an extent. Revisit to refactor and one more transition

--- a/css/weather.css
+++ b/css/weather.css
@@ -2,12 +2,12 @@ body {
     background: url(/cover/purple-crystalball-v2.png) no-repeat center center fixed;
     background-size: cover;
     height: 600px;
-    margin: 0;
+    margin: 5px;
     display: grid;
     grid-template-rows: 500px 100px;
     grid-template-columns: 1fr 30px 30px 30px 30px 30px 1fr;
     align-items: center;
-    justify-items: start;
+    justify-items: start;       /* Map positioning*/
 }
 
 main#carousel {
@@ -17,7 +17,7 @@ main#carousel {
     height: 500px;
     display: flex;
     align-items: center ;
-    justify-content: space-evenly;
+    justify-content: center;
     overflow: hidden;
     transform-style: preserve-3d;
     perspective: 600px;
@@ -28,10 +28,10 @@ main#carousel {
 }
 
 div.item {
-    position: fixed;
+    position: absolute;
     width: 300px;
     height: 400px;
-    opacity: 60%;
+    opacity: 80%;
     --r: calc(var(--position) - var(--offset));
     --abs: max(calc(var(--r) * -1), var(--r));
     transition: all 0.25s linear;
@@ -102,14 +102,16 @@ input:nth-of-type(5):checked ~ main#carousel {
 }
 ul {
     list-style: none;
-    opacity: 40%;
+    opacity: 70%;
+    border-radius: 50%;
+    height: 50px;
 }
 /*Circle pre-sets*/
 #circle {
     width: 500px;
     height: 500px;
     position: fixed;
-    margin: 60px 0px 0px 660px;
+    margin: 60px 50px 0px 500px;
     line-height: 50px;
     text-align: center;
     border-radius: 50%;
@@ -136,14 +138,13 @@ h2 {
 #weather-info{
     display: flex;
     height: 100vh;
-    place-items: center start;
+    place-items: center;
     box-sizing: border-box;
-    margin: 50px 0 80px 600px;
+    margin: 40px 80px 80px 350px;
     padding: 50px;
-    width: 500px;
     position: fixed;
     line-height: 50px;
-    text-align: center;
+    text-align: start;
     border-radius: 50%;
     font-size: 20px;
     color: #fff;
